--- a/index.html
+++ b/index.html
@@ -122,12 +122,9 @@
                 <div class="col-md-9">
                   <div class="about-content">
                     <p>
-                      Bonjour, je suis Meidhi je suis technicien informatique &
-                      développeur Web situé à Le Puy En Velay. J'aime concevoir
-                      et développer des sites Web autant que j'aime la
-                      résolution de problèmes informatique. Je bidouille dans ce
-                      domaine depuis plus de 5 ans et je suis prêt à vous aider
-                      à faire passer votre produit au niveau supérieur.
+                      Bonjour, J’ai acquies des bases en tant que technicien informatique et développeur web je suis situé au puy en velay 
+                      J'aime concevoir et développer des sites Web autant que j'aime la résolution de problèmes informatiques. 
+                      J'ai acquis des connaissances dans ce domaine depuis plus de 5 ans et je suis tout aussi passionné de développement web. 
                     </p>
                     <a
                       href="#contact"
@@ -135,7 +132,7 @@
                       >Me contacter</a
                     >
                     <a
-                      href="./projets/cv/CV.pdf"
+                      href="./projets/cv/CV_Meidhi_Zeghdoud.pdf"
                       class="btn btn-clear btn-lg border-color linear hire"
                       >Téléchargement CV</a
                     >
